--- a/html/interests.html
+++ b/html/interests.html
@@ -29,6 +29,7 @@
     <!-- Icons  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Interests</title>
 </head>
 
@@ -89,7 +90,7 @@
                         <li><a href="https://www.instagram.com/bossthemalamute/">Boss</a></li>
                     </ul>
                     <p>Thoughts:</p>
-                    <p>Massive bear. Big fluffy doge </p>
+                    <p>Massive bear. Big fluffy doge.</p>
                 </div>
 
             </div>
@@ -123,7 +124,7 @@
                         <li><a href="https://www.instagram.com/tuckerbudzyn/">Tuckerbudzyn</a></li>
                     </ul>
                     <p>Thoughts:</p>
-                    <p>Super happy doge</p>
+                    <p>Super happy doge.</p>
                 </div>
             </div>
             <div class="image3">
@@ -158,7 +159,7 @@
                         <li><a href="https://www.instagram.com/samoyedpage/?hl=en">Alot of Samoyeds</a></li>
                     </ul>
                     <p>Thoughts:</p>
-                    <p>Walking land cloud and borderline polar bear. Just look at the picture</p>
+                    <p>Walking land cloud and borderline polar bear. Just look at the picture.</p>
                 </div>
             </div>
         </div>
@@ -235,7 +236,7 @@
                     <p>Thoughts:</p>
                     <p>Pistons have been in a rough shape for a while now, but we've been slowly building up a solid
                         young core.
-                        It still might take a few more years to get back into contention</p>
+                        It still might take a few more years to get back into contention.</p>
                 </div>
             </div>
             <div class="image3">
@@ -270,7 +271,7 @@
                     <p>Thoughts:</p>
                     <p>Dan Campbell has been changing the culture of this team. Although our record isn't the best, we
                         are defnitely improving every year.
-                        Quite possibly a few more pieces away from turning into a contender</p>
+                        Quite possibly a few more pieces away from turning into a contender.</p>
                 </div>
             </div>
         </div>
@@ -349,7 +350,7 @@
                     <p>Thoughts:</p>
                     <p>Grew up eating alot of salmon so it has grown on me.
                         I would probably eat it with just about anything, but it's too expensive for me to afford
-                        constantly smoge </p>
+                        constantly smoge. </p>
                 </div>
             </div>
             <div class="image3">
@@ -394,7 +395,7 @@
     <footer>
         <h1>Connect with me!</h1>
         <div class="footerMain">
-            <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">&#8205</a>
+            <a href="https://www.linkedin.com/in/kouki-hosoyachi-aba64b1b3/" class="fa fa-linkedin">&#8205</a>
             <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
         </div>
