--- a/html/projects.html
+++ b/html/projects.html
@@ -33,6 +33,7 @@
     <!-- Icons  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Projects</title>
 </head>
 
@@ -60,7 +61,7 @@
         <h1>Projects and Experiences</h1>
         <div class="projects">
             <div class="projectItems">
-                <p>Asteroid Game</p>
+                <p class="projectTitle">Asteroid Game</p>
                 <img src="../images/asteroids.PNG" alt="Asteroids Game">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs">
@@ -82,12 +83,15 @@
             </div>
 
             <div class="desktopProjectsView">
-                <p>Description</p> 
-                <p>Worked as part of a small intern team</p>
-                <p>aksjflakfjskdlfd</p>
+                <p>Asteroid Game</p>
+                <p>Description:</p> 
+                <p>Using HTML, CSS, JS(Jquery), built a simple Asteroid Aversion game that prioritized surviving as long as possible</p>
+                <br>
+                <p>Time Frame:</p>
+                <p>Completed: October 9th 2022</p>
             </div>
             <div class="projectItems">
-                <p>Tyler Technologies Internship</p>
+                <p class="projectTitle">Tyler Technologies Internship</p>
                 <img src="../images/tylertech.jpg" alt="Tyler Technologies">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs">
@@ -109,11 +113,17 @@
             </div>
 
             <div class="desktopProjectsView">
-                <p>aksjflakfjskdlfd</p>
+                <p>Tyler Technologies Internship</p>
+                <p>Description:</p> 
+                <p>Worked with a small team of interns to develop enhancements on a website called Tyler Cashiering, which local governments around the country used to conduct financial matters.
+                    Followed a Agile Methodology and SCRUM roles to structure development.</p>
+                <br>
+                <p>Time Frame:</p>
+                <p>May - August 2022</p>
             </div>
 
             <div class="projectItems">
-                <p>Artist Search</p>
+                <p class="projectTitle">Artist Search</p>
                 <img src="../images/itunes.png" alt="Itunes">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs">
@@ -132,13 +142,18 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="desktopView">
-
-                </div>
+            <div class="desktopProjectsView">
+                <p>Artist Search</p>
+                <p>Description:</p> 
+                <p>Using HTML, CSS, JS(Vue), built a artist Search website utilizing a public Itunes API to display certain track information upon user input.</p>
+                <br>
+                <p>Time Frame:</p>
+                <p>Completed November 20th 2022</p>
             </div>
             <div class="projectItems">
-                <p>Insta485</p>
+                <p class="projectTitle">Insta485</p>
                 <img src="../images/insta485.PNG" alt="insta485 Project">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs">
@@ -157,16 +172,18 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="desktopView">
-
-                </div>
-                <!-- <div class="inDepthInformation">
-                    First experience with JS. Mostly used JQuery to alter screens upon user clicks.
-                </div> -->
+            <div class="desktopProjectsView">
+                <p>Insta485</p>
+                <p>Description:</p> 
+                <p>Developed an instagram clone in both server-side, using Python Flask library and client-side manners, using React. Deployed final site onto AWS EC2 instance.</p>
+                <br>
+                <p>Time Frame:</p>
+                <p>Completed October 16th 2022</p>
             </div>
             <div class="projectItems">
-                <p>Bank of America Internship</p>
+                <p class="projectTitle">Bank of America Internship</p>
                 <img src="../images/bofa.jpg" alt="Bank of America">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs">
@@ -183,13 +200,17 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="desktopView">
-
-                </div>
+            </div>
+            <div class="desktopProjectsView">
+                <p>Bank of America Internship</p>
+                <p>Description:</p> 
+                <p>Joining team of Full Stack Developers in Charlotte, NC. Still awaiting further details regarding project information.</p>
+                <br>
+                <p>Time Frame:</p>
+                <p>Start Date: June 2023 </p>
             </div>
             <div class="projectItems">
-                <p>Ann Arbor Suzuki Institute</p>
+                <p class="projectTitle">Ann Arbor Suzuki Institute</p>
                 <img src="../images/annarbor.PNG" alt="Ann Arbor Suzuki Institute">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs">
@@ -207,13 +228,19 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="desktopView">
-
-                </div>
+            <div class="desktopProjectsView">
+                <p>Ann Arbor Suzuki Institute</p>
+                <p>Description:</p> 
+                <p>Custom website made with Void Tech Consulting for local music tutoring service. Utilized Wordpress, 
+                    PHP to allow for customer access and HTMl and CSS to follow a Figma.</p>
+                <br>
+                <p>Time Frame:</p>
+                <p>Completed April 2021</p>
             </div>
             <div class="projectItems">
-                <p>Office Hours Queue</p>
+                <p class="projectTitle">Office Hours Queue</p>
                 <img src="../images/officehours.PNG" alt="Office Hours Queue">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs">
@@ -228,17 +255,22 @@
                             <p>Languages Used: C++</p>
                         </div>
                         <div role="tabpanel" id="timeFrame7" class="tab-pane fade">
-                            <p>Completed March 2021</p>
+                            <p>Completed Mar 2021</p>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="desktopView">
-
-                </div>
+            <div class="desktopProjectsView">
+                <p>Office Hours Queue EECS 280</p>
+                <p>Description:</p> 
+                <p>Built a mock office hours queue program using Linked Lists alongside a mock API and GUI.</p>
+                <br>
+                <p>Time Frame:</p>
+                <p>Completed: March 2021</p>
             </div>
             <div class="projectItems">
-                <p>Map Reduce</p>
+                <p class="projectTitle">Map Reduce</p>
                 <img src="../images/mapreduce.png" alt="Map Reduce Project">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs">
@@ -248,7 +280,7 @@
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description8" class="tab-pane fade in active">
-                            <p>Single Machine, multi-threaded server that executes user-submitted Map Reduce Jobs</p>
+                            <p>Single Machine, multi-threaded server that executes user-submitted Map Reduce Jobs.</p>
                             <p>Languages Used: Python</p>
                         </div>
                         <div role="tabpanel" id="timeFrame8" class="tab-pane fade">
@@ -256,13 +288,18 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="desktopView">
-
-                </div>
+            <div class="desktopProjectsView">
+                <p>Map Reduce EECS 485</p>
+                <p>Description:</p> 
+                <p>Single machine, multi-threaded server that executes user-submitted Map Reduce jobs. Built using Python.</p>
+                <br>
+                <p>Time Frame:</p>
+                <p>Completed: October 9th 2022</p>
             </div>
             <div class="projectItems">
-                <p>Ask485</p>
+                <p class="projectTitle">Ask485</p>
                 <img src="../images/ask485.png" alt="Google Search Engine Replica">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs">
@@ -276,14 +313,20 @@
                             <p>Languages Used: HTML, CSS, Python, SQL</p>
                         </div>
                         <div role="tabpanel" id="timeFrame9" class="tab-pane fade">
-                            <p>Completed December 6th 2022</p>
+                            <p>Completed Dec 6th 2022</p>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="desktopView">
-
-                </div>
+            <div class="desktopProjectsView">
+                <p>Ask485 EECS 485</p>
+                <p>Description:</p> 
+                <p>Scalable search engine similar to Google using a mock Wikipedia database. Allowed user to input a query where we calculated a inverted index and ranked documents to display accurate results.
+                </p>
+                <br>
+                <p>Time Frame:</p>
+                <p>Completed: December 6th 2022</p>
             </div>
         </div>
 
@@ -294,7 +337,7 @@
     <footer>
         <h1>Connect with me!</h1>
         <div class="footerMain">
-            <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">&#8205</a>
+            <a href="https://www.linkedin.com/in/kouki-hosoyachi-aba64b1b3/" class="fa fa-linkedin">&#8205</a>
             <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
         </div>
