--- a/html/contact.html
+++ b/html/contact.html
@@ -29,6 +29,7 @@
     <!-- Icons  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Contact</title>
 </head>
 
@@ -91,7 +92,7 @@
     <footer>
         <h1>Connect with me!</h1>
         <div class="footerMain">
-            <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">&#8205</a>
+            <a href="https://www.linkedin.com/in/kouki-hosoyachi-aba64b1b3/" class="fa fa-linkedin">&#8205</a>
             <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
         </div>
