--- a/html/contact.html
+++ b/html/contact.html
@@ -69,13 +69,13 @@
                 <br>
                 <input type="text" id="lname" name="lastname" placeholder="Your last name..">
                 <br><br>
-                <label for="message">Personal Email</label>
+                <label for="email">Personal Email</label>
                 <input type="text" id="email" name="email" placeholder="Your email...">
                 <br><br>
-                <label for="message">Phone Number</label>
+                <label for="number">Phone Number</label>
                 <input type="text" id="number" name="number" placeholder="Your phone number...">
                 <br><br>
-                <label for="fname">Contact Me By</label>
+                <label for="contactMethod">Contact Me By</label>
                 <br><br>
                 <input type="radio" id="contactMethod" name="contactMethod" value="email"> Email
                 <input type="radio" id="contactMethod" name="contactMethod" value="phone"> Phone
