--- a/html/contact.html
+++ b/html/contact.html
@@ -41,7 +41,7 @@
         <nav class="navBar">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <i class="fas fa-bars">&#8205</i>
+                <i class="fas fa-bars">&#8205;</i>
             </label>
             <a class="logo"  id="navLogo" href="../index.html">Kouki Hosoyachi</a>
             <ul>
@@ -58,8 +58,6 @@
             <h1>Contact Me</h1>
             <p>I'd Love to chat!</p>
         </div>
-
-        </div>
         <div class="contactForm">
             <form action="https://formspree.io/f/xbjbvlvb" method="POST">
                 <label for="fname">First Name</label>
@@ -75,13 +73,13 @@
                 <label for="number">Phone Number</label>
                 <input type="text" id="number" name="number" placeholder="Your phone number...">
                 <br><br>
-                <label for="contactMethod">Contact Me By</label>
-                <br><br>
-                <input type="radio" id="contactMethod" name="contactMethod" value="email"> Email
-                <input type="radio" id="contactMethod" name="contactMethod" value="phone"> Phone
-                <br><br>
+                <!-- <label for="emailMethod">Contact By Email </label>
+                <input type="radio" id="emailMethod" name="contactMethod" value="email"> 
+                <label for="phoneMethod">Contact By Phone </label>
+                <input type="radio" id="phoneMethod" name="contactMethod" value="phone"> 
+                <br><br> -->
                 <label for="message">Leave a Message</label>
-                <input type="textarea" id="message" name="message" placeholder="Your message...">
+                <input type="text" id="message" name="message" placeholder="Your message...">&#8205;
                 <br><br>
                 <input type="submit" value="Submit">
             </form>
@@ -92,9 +90,9 @@
     <footer>
         <h1>Connect with me!</h1>
         <div class="footerMain">
-            <a href="https://www.linkedin.com/in/kouki-hosoyachi-aba64b1b3/" class="fa fa-linkedin">&#8205</a>
-            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
-            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
+            <a href="https://www.linkedin.com/in/kouki-hosoyachi-aba64b1b3/" class="fa fa-linkedin">&#8205;</a>
+            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205;</a>
+            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205;</a>
         </div>
 
         <div class="navLinks">
@@ -104,6 +102,4 @@
         </div>
     </footer>
 </body>
-<script src="../js/scripts.js"></script>
-
 </html>
