--- a/html/interests.html
+++ b/html/interests.html
@@ -41,7 +41,7 @@
         <nav class="navBar">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <i class="fas fa-bars">&#8205</i>
+                <i class="fas fa-bars">&#8205;</i>
             </label>
             <a class="logo" id="navLogo" href="../index.html">Kouki Hosoyachi</a>
             <ul>
@@ -63,17 +63,17 @@
                 <div class="tempTitle">
                     <p>Alaskan Malamute </p>
                 </div>
-                <div class="imageCaption" id="caption">
+                <div class="imageCaption"  >
                     <p>Alaskan Malamute </p>
                     <p>Insta accounts I follow</p>
                     <p></p>
-                    <div class="dropdown" id="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    <div class="dropdown"  >
+                        <button class="btn dropdown-toggle" type="button"   data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="true">
                             Instagram Accounts
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu"  >
                             <li><a href="https://www.instagram.com/elvis.barksley/">Elvis Barkley</a></li>
                             <li><a href="https://www.instagram.com/malamutemoosh/">Mooshie</a></li>
                             <li><a href="https://www.instagram.com/bossthemalamute/">Boss</a></li>
@@ -99,17 +99,17 @@
                 <div class="tempTitle">
                     <p>Golden Retreiver</p>
                 </div>
-                <div class="imageCaption" id="caption">
+                <div class="imageCaption">
                     <p>Golden Retreiver </p>
                     <p>Insta accounts I follow</p>
                     <p></p>
-                    <div class="dropdown" id="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle" type="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="true">
                             Instagram Accounts
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu"  >
                             <li><a href="https://www.instagram.com/adventuringwithnala/">Nala</a></li>
                             <li><a href="https://www.instagram.com/tuckerbudzyn/">Tucker</a></li>
                         </ul>
@@ -132,16 +132,16 @@
                 <div class="tempTitle">
                     <p>Samoyed </p>
                 </div>
-                <div class="imageCaption" id="caption">
+                <div class="imageCaption"  >
                     <p>Samoyed </p>
                     <p>Insta accounts I follow</p>
-                    <div class="dropdown" id="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    <div class="dropdown"  >
+                        <button class="btn dropdown-toggle" type="button"   data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="true">
                             Instagram Accounts
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu"  >
                             <li><a href="https://www.instagram.com/mayathepolarbear/">Maya</a></li>
                             <li><a href="https://www.instagram.com/boomer_the_landcloud/">Boomer</a></li>
                             <li><a href="https://www.instagram.com/samoyedpage/?hl=en">Alot of Samoyeds</a></li>
@@ -171,17 +171,17 @@
                 <div class="tempTitle">
                     <p>Michigan Sports</p>
                 </div>
-                <div class="imageCaption" id="caption">
+                <div class="imageCaption"  >
                     <p>Michigan Sports</p>
                     <p>Recent Highlights</p>
                     <p></p>
-                    <div class="dropdown" id="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    <div class="dropdown"  >
+                        <button class="btn dropdown-toggle" type="button"   data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="true">
                             Highlights
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu"  >
                             <li><a href="https://www.youtube.com/watch?v=1n4rqMnxaig">Jordan Poole Clutch 3</a></li>
                             <li><a href="https://www.youtube.com/watch?v=FeF5-Ppi_dA">Ohio State 2021 Win</a></li>
                             <li><a href="https://www.youtube.com/watch?v=jOJccSU82GA">Ohio State 2022 Win</a></li>
@@ -207,17 +207,17 @@
                 <div class="tempTitle">
                     <p>Deeeeeeeeeetroit Basketball</p>
                 </div>
-                <div class="imageCaption" id="caption">
+                <div class="imageCaption"  >
                     <p>Detroit Pistons</p>
                     <p>Recent Highlights</p>
                     <p></p>
-                    <div class="dropdown" id="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    <div class="dropdown"  >
+                        <button class="btn dropdown-toggle" type="button"   data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="true">
                             Highlights
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu"  >
                             <li><a href="https://youtu.be/rkH56uneMx8?t=147">Jerami Grant Dunk</a></li>
                             <li><a href="https://www.youtube.com/watch?v=EjC01CM7NFQ">Getting #1 Draft Pick</a></li>
                             <li><a href="https://youtu.be/rm8bmsPIN4A?t=747">Saddiq Bey Clutch 3</a></li>
@@ -244,16 +244,16 @@
                 <div class="tempTitle">
                     <p>Detroit Lions </p>
                 </div>
-                <div class="imageCaption" id="caption">
+                <div class="imageCaption"  >
                     <p>Detroit Lions </p>
                     <p>Recent Highlights</p>
-                    <div class="dropdown" id="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    <div class="dropdown"  >
+                        <button class="btn dropdown-toggle" type="button"   data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="true">
                             Highlights
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu"  >
                             <li><a href="https://www.youtube.com/watch?v=u3tXbkl5DHo">Destroying Jags</a></li>
                             <li><a href="https://www.youtube.com/watch?v=_8H4PAYxoms">2022 NFL Draft</a></li>
                             <li><a href="https://www.youtube.com/watch?v=UUjQqkponWs">Amon-Ra St Brown</a></li>
@@ -282,17 +282,17 @@
                 <div class="tempTitle">
                     <p>Any Pasta</p>
                 </div>
-                <div class="imageCaption" id="caption">
+                <div class="imageCaption"  >
                     <p>Pasta</p>
                     <p>Top Pasta Dishes</p>
                     <p></p>
-                    <div class="dropdown" id="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    <div class="dropdown"  >
+                        <button class="btn dropdown-toggle" type="button"   data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="true">
                             Rankings
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu"  >
                             <li><a href="https://bellyfull.net/chicken-alfredo-recipe/">1)Chicken Alfredo</a></li>
                             <li><a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">2)Lasangne</a>
                             </li>
@@ -319,17 +319,17 @@
                 <div class="tempTitle">
                     <p>Salmon</p>
                 </div>
-                <div class="imageCaption" id="caption">
+                <div class="imageCaption"  >
                     <p>Salmon</p>
                     <p>Top Salmon Dishes</p>
                     <p></p>
-                    <div class="dropdown" id="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    <div class="dropdown"  >
+                        <button class="btn dropdown-toggle" type="button"   data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="true">
                             Rankings
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu"  >
                             <li><a href="https://atastykitchen.com/how-to-make-sushi/">1)Nigiri/Sashimi</a></li>
                             <li><a href="https://www.thechunkychef.com/honey-garlic-glazed-salmon/">2)Honey Glazed
                                     Salmon</a></li>
@@ -358,16 +358,16 @@
                 <div class="tempTitle">
                     <p>Chicken Sandwiches</p>
                 </div>
-                <div class="imageCaption" id="caption">
+                <div class="imageCaption"  >
                     <p>Chicken Sandwich</p>
                     <p>Rankings</p>
-                    <div class="dropdown" id="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    <div class="dropdown"  >
+                        <button class="btn dropdown-toggle" type="button"   data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="true">
                             Rankings
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu"  >
                             <li><a href="https://www.popeyes.com/">1)Popeyes</a></li>
                             <li><a href="https://www.chick-fil-a.com/">2)Chick fil A</a></li>
                             <li><a href="https://www.wingstop.com/">3)Wingstop</a></li>
@@ -395,9 +395,9 @@
     <footer>
         <h1>Connect with me!</h1>
         <div class="footerMain">
-            <a href="https://www.linkedin.com/in/kouki-hosoyachi-aba64b1b3/" class="fa fa-linkedin">&#8205</a>
-            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
-            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
+            <a href="https://www.linkedin.com/in/kouki-hosoyachi-aba64b1b3/" class="fa fa-linkedin">&#8205;</a>
+            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205;</a>
+            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205;</a>
         </div>
 
         <div class="navLinks">
@@ -407,6 +407,4 @@
         </div>
     </footer>
 </body>
-<script src="../js/scripts.js"></script>
-
 </html>
