--- a/html/projects.html
+++ b/html/projects.html
@@ -45,7 +45,7 @@
         <nav class="navBar">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <i class="fas fa-bars">&#8205</i>
+                <i class="fas fa-bars">&#8205;</i>
             </label>
             <a class="logo" id="navLogo" href="../index.html">Kouki Hosoyachi</a>
             <ul>
@@ -337,9 +337,9 @@
     <footer>
         <h1>Connect with me!</h1>
         <div class="footerMain">
-            <a href="https://www.linkedin.com/in/kouki-hosoyachi-aba64b1b3/" class="fa fa-linkedin">&#8205</a>
-            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
-            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
+            <a href="https://www.linkedin.com/in/kouki-hosoyachi-aba64b1b3/" class="fa fa-linkedin">&#8205;</a>
+            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205;</a>
+            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205;</a>
         </div>
 
         <div class="navLinks">
@@ -349,6 +349,4 @@
         </div>
     </footer>
 </body>
-<script src="../js/scripts.js"></script>
-
 </html>
