--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-WMZNEEKSKK');
-</script>
+        gtag('config', 'G-WMZNEEKSKK');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,9 +30,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Home</title>
-    <script src='js/jquery.min.js'></script>
 </head>
 
 <body>
@@ -78,8 +79,67 @@
                         role="button">Resume</a></p>
             </div>
         </div>
-    </main>
+        <!-- div_skills -->
+        <div class="favLanguages">
+            <h3>Favorite Languages and Frameworks</h3>
+            <div class="codingLanguageContainer">
+                <div class="language" tabindex="0">
+                    <div class="codingLanguage-inner">
+                        <div class="codingLanguage-front">
+                            <img src="images/icons8-react-native-50.png" alt = "React Icon"/>
+                        </div>
+                        <div class="codingLanguage-back">
+                            <p>React</p>
+                        </div>
+                    </div>
+                    
+                </div>
 
+                <div class="language" tabindex="0">
+                    <div class="codingLanguage-inner">
+                        <div class="codingLanguage-front">
+                            <img src="images/icons8-html-5-50.png" alt = "HTML Icon"/>
+                        </div>
+                        <div class="codingLanguage-back">
+                            <p>HTML</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="language" tabindex="0">
+                    <div class="codingLanguage-inner">
+                        <div class="codingLanguage-front">
+                            <img src="images/icons8-python-50.png" alt = "Python Icon"/>
+                        </div>
+                        <div class="codingLanguage-back">
+                            <p>Python</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="language" tabindex="0">
+                    <div class="codingLanguage-inner">
+                        <div class="codingLanguage-front">
+                            <img src="images/icons8-c++-50.png" alt = "C++ Icon"/>
+                        </div>
+                        <div class="codingLanguage-back">
+                            <p>C++</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="language" tabindex="0">
+                    <div class="codingLanguage-inner">
+                        <div class="codingLanguage-front">
+                            <img src="images/icons8-angularjs-50.png" alt = "AngularJS Icon"/>
+                        </div>
+                        <div class="codingLanguage-back">
+                            <p>AngularJS</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </main>
 
     <footer>
         <h1>Connect with me!</h1>
@@ -96,4 +156,5 @@
         </div>
     </footer>
 </body>
+
 </html>
